Pruner reduces compile time by ~60%